--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "@jasonhk/typescript-config": "^1.0.1",
+    "@types/node": "^14.0.9",
     "typescript": "^3.9.3"
   }
 }
